--- a/views/abouts/career.ejs
+++ b/views/abouts/career.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate.ejs") -%>
 
-    <div class="hero-container" style="width: 100vw;">
+    <div class="hero-container">
         <main>
             <div class="about-intro">
                 <div class="process"><p class="head">Join us.</p></div>
@@ -12,7 +12,7 @@
                 </div>
             </div>
             <a href="#opportunity">
-                <p class="head-tag" style="text-decoration: underline;margin-bottom: 2rem;" id="open-positions">View Open Positions</p>
+                <p class="head-tag" style="text-decoration: underline;margin-bottom: 2rem;" id="open-positions"><i class="fa-solid fa-arrow-right"></i> View Open Positions</p>
             </a>
             
             <div class="row  ">
