--- a/views/abouts/process.ejs
+++ b/views/abouts/process.ejs
@@ -1,9 +1,9 @@
 <% layout("/layouts/boilerplate.ejs") -%>
 
-  <div class="process">
+  <div class="process ">
     <p class="head">From Zoom</p>
   </div>
-  <div class="process"><p class="head-tag">... to vroom... to "boom"</p></div>
+  <div class="process animation"><p class="head-tag">... to vroom... to "boom"</p></div>
   <div class="process-desc">
     <p>As your creative co-pilots, weʼre with you every step of the way, from initial brainstorming to launch day. Our
       expert guidance ensures a seamless journey, delivering a custom web development that captivates, engages, and
