--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,26 +1,50 @@
 <% layout("/layouts/boilerplate.ejs") -%>
 
-    <div class="contact">
-        <h1 class="hello try">Hello.</h1>
-        <p class="info-text mt-1" style="width: 50%;">How can we help today ?</p>
+    <!-- <div class="contact">
+        <h1 class="hello try"></h1>
+        <p class="info-text mt-1" style="width: 50%;"></p>
     </div>
 
     <div class="about-info">
         <div class="experience" style="width: 80%;">
-            <p class="info-text-tag" style="font-size: xx-large; font-weight:lighter;">Ready to transform your brand's
-                digital home ?</p>
+            <p class="info-text-tag" style="font-size: xx-large; font-weight:lighter;"</p>
             <hr id="hr">
-            <p class="info-text-tag" style="font-weight: lighter; font-size: large;">CHAT WITH US</p>
-            <a href="tel:+918815950172">
+            <p class="info-text-tag" style="font-weight: lighter; font-size: large;"></p>
+            <a >
                 <p class="info-text-tag" style="font-weight: lighter; font-size: xx-large; margin-top: -2rem;">
-                    213.894.9933
+                    
                     <hr>
                 </p>
             </a>
             <a href="mailto:jeveneabhi665@gmail.com">
-                <p class="info-text-tag" style="font-weight: lighter; font-size: xx-large;">hello@orvanedigitals.com
+                <p class="info-text-tag" style="font-weight: lighter; font-size: xx-large;">
                     <hr>
                 </p>
             </a>
         </div>
+    </div> -->
+
+<div class="hero-container">
+  <div style="width: 50vw;">
+    <div class="process">
+      <p class="head" id="hello"  style="font-size: 10vh;">Hello,</p>
     </div>
+    <div class="process">
+      <p class="head-tag" style="font-size: 5vh;">How can we help today ?</p>
+    </div>
+    <div class="process-desc">
+      <p>Ready to transform your brand's
+                digital home ?</p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-xl-3 mx-auto hero-in-sub-fade-up ms-auto" style="width: 40vw; ">
+    <div class="statistics font-stat stat ">
+      <span class="h2 d-block font-stat stat" style="font-size: 4vh;margin-bottom: 2rem;">CHAT WITH US</span>
+      <a href="tel:+918815950172"><span class="body-large d-block mb-2 stat" style="font-size: 3vh;">213.894.9933</span></a>
+    </div>
+    <div class="statistics font-stat stat ">
+      <a href="mailto:jeveneabhi665@gmail.com"><span class="h2 d-block font-stat stat mb-2" style="font-size: 3vh;margin-bottom: 2rem;margin-top: 2rem;">hello@orvanedigitals.com</span></a>
+    </div>
+  </div>
+</div>
