--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,6 +12,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     crossorigin="anonymous" referrerpolicy="no-referrer">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
+  <link href="css/employee.css" rel="stylesheet">
+  <link href="css/detail.css" rel="stylesheet">
+  <link href="css/home.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/service.css">
 </head>
 
 <body>
