--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -22,13 +22,13 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-5" href="/orvane/services">Services</a>
+          <a class="nav-link fs-5" href="/service">Services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link fs-5" href="/portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-5" href="#">Employees</a>
+          <a class="nav-link fs-5" href="/employee">Employees</a>
         </li>
         <li class="nav-item">
           <% if (user && user.username) { %>
