--- a/views/termsandprivacy/privacy.ejs
+++ b/views/termsandprivacy/privacy.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate.ejs") -%>
 
   <header class="tc-header col-8 offset-2">
-    <h1 class="mt-2">Privacy Policy</h1>
+    <h1 class="mt-2">Privacy @ Orvane</h1>
     <p class="last-updated">Last updated: <time datetime="2025-09-30">September 30, 2025</time></p>
   </header>
 
