--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,6 +16,7 @@
   <link href="css/detail.css" rel="stylesheet">
   <link href="css/home.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/service.css">
+  <link rel="stylesheet" href="/css/profile.css">
 </head>
 
 <body>
