--- a/views/services/post_project.ejs
+++ b/views/services/post_project.ejs
@@ -8,34 +8,34 @@
     <form method="POST" action="/service/post-project" novalidate class="needs-validation" >
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
-            <input name="project[title]" placeholder="Add a Title of Project" type="text" class="form-control" required>
+            <input name="task[title]" placeholder="Add a Title of Project" type="text" class="form-control" required>
             <div class="valid-feedback">Title Looks Good.</div>
         </div>
 
         <div class="mb-3">
-            <label for="project_domain" class="form-label">Domain</label>
-            <input name="project[project_domain]" value="<%-service.title%>" type="text" class="form-control" readonly required> 
+            <label for="domain" class="form-label">Domain</label>
+            <input name="task[domain]" value="<%-service.title%>" type="text" class="form-control" readonly required> 
             <div class="valid-feedback">Project Domain</div>
         </div>
 
         <div class="mb-3">
-            <label for="project-requirment" class="form-label">Requirments</label>
-            <textarea name="project[project_requirment]" placeholder="Enter Your Requirments" type="text" class="form-control" required></textarea>
+            <label for="requirments" class="form-label">Requirments</label>
+            <textarea name="task[requirments]" placeholder="Enter Your Requirments" type="text" class="form-control" required></textarea>
             <div class="invalid-feedback">Please Enter Your Requirments</div>
         </div>
 
 
         <div class="mb-3">
-            <label for="project[end_date]" class="form-label">Project Estimated Deadline</label>
-            <input name="project[end_date]" placeholder="Enter Date" type="date" class="form-control" required></input>
+            <label for="deadline" class="form-label">Project Estimated Deadline</label>
+            <input name="task[deadline]" placeholder="Enter Date" type="date" class="form-control" required></input>
             <div class="invalid-feedback">Please Enter A Deadline Date</div>
         </div>
         
         
         <div class="row">
             <div class="mb-3 col-md-4">
-                <label for="project[price]" class="form-label">Price (In Dollars)</label>
-                <input name="project[price]" placeholder="Enter Price in dollar" type="number" class="form-control" value="2000" min="2000" required>
+                <label for="price" class="form-label">Price (In Dollars)</label>
+                <input name="task[price]" placeholder="Enter Price in dollar" type="number" class="form-control" value="2000" min="2000" required>
                 <div class="invalid-feedback" style="color: rgb(218, 90, 90);font-family: Arial">Enter a Valid Price</div>
                 <div class="valid-feedback" style="color: rgb(92, 208, 92);">Note - Project Price is Uncertain.</div>
             </div>
