updatin home ui

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -16,6 +16,14 @@ body {
   color: #fff;
 }
 
+@media(max-width:350px){
+  .navbar{
+    padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+
 .hero::before {
   content: "";
   position: absolute;
