Refactor code formatting and improve validation feedback in forms

--- a/views/portfolio/portfolio.ejs
+++ b/views/portfolio/portfolio.ejs
@@ -9,7 +9,7 @@
       </p>
 
       <div class="row  row-cols-sm-2 row-cols-md-3  g-4">
-        <!-- Project 1 -->
+        <!-- Projects -->
         <% for(let portfolio of Portfolios) { %>
           <div class="col-md-4  row-cols-sm-2 row-cols-md-3  mb-5">
             <a href="/portfolio/<%= portfolio._id%>">
