--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -1,38 +1,96 @@
 <!DOCTYPE html>
 <html lang="en" id="web-page">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Orvane</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Orvane</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link href="css/employee.css" rel="stylesheet" />
+    <link href="css/detail.css" rel="stylesheet" />
+    <link href="css/home.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/service.css" />
+    <link rel="stylesheet" href="/css/profile.css" />
+  </head>
+  <html lang="en" id="web-page">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Orvane</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-    crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
-  <link href="css/employee.css" rel="stylesheet">
-  <link href="css/detail.css" rel="stylesheet">
-  <link href="css/home.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/service.css">
-  <link rel="stylesheet" href="/css/profile.css">
-</head>
+      <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        crossorigin="anonymous"
+      />
+      <link rel="stylesheet" href="/css/style.css" />
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
+        rel="stylesheet"
+      />
+      <link href="css/employee.css" rel="stylesheet" />
+      <link href="css/detail.css" rel="stylesheet" />
+      <link href="css/home.css" rel="stylesheet" />
+      <link rel="stylesheet" href="/css/service.css" />
+      <link rel="stylesheet" href="/css/profile.css" />
+    </head>
 
-<body>
+    <body>
+      <%- include("../includes/navbar.ejs") %>
 
-  <%- include("../includes/navbar.ejs") %>
+      <div class="container-fluid body">
+        <%- include("../includes/flash.ejs") %> <%- body %>
+      </div>
 
-    <div class="container-fluid body">
-      <%- include("../includes/flash.ejs") %>
-        <%- body %>
-    </div>
+      <%- include("../includes/footer.ejs") %>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"
+      ></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
-    <%- include("../includes/footer.ejs") %>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-      <script src="/js/index.js"></script>
+      <script>
+        (() => {
+          "use strict";
 
-</body>
+          const forms = document.querySelectorAll(".needs-validation");
 
+          Array.from(forms).forEach((form) => {
+            form.addEventListener(
+              "submit",
+              (event) => {
+                if (!form.checkValidity()) {
+                  event.preventDefault();
+                  event.stopPropagation();
+                }
+                form.classList.add("was-validated");
+              },
+              false
+            );
+          });
+        })();
+      </script>
+    </body>
+  </html>
 </html>
